# viam-camera-realsense

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conanfile.py  first_run.sh  install_udev_rules.sh  main.cpp  meta.json
.github/workflows/: build-publish.yml  docker.yml  module-tgz.yml  test.yml
etc/: Dockerfile.cuda.debian.bookworm  Dockerfile.debian.bookworm
integration/: go.mod  go.sum
integration/tests/: all_test.go
src/: camera_realsense.cpp  camera_realsense.hpp
src/module/: device.hpp  device_impl.hpp  discovery.hpp  firmware_update.hpp  realsense.hpp
test/: CMakeLists.txt  device_tests.cpp  integration_tests.cpp  realsense_tests.cpp
